karnc/tests/fixtures/positive/71_context_uses_commons/src/commerce/orders.karn
context commerce.orders {
  uses commerce.money

  exports transparent { Order }

  type Order = {
    total: Money,
  }
}
