karnc/tests/fixtures/negative/56_export_undeclared_type/src/commerce/orders.karn
context commerce.orders {
  exports opaque { NotDeclared }

  type Order = Int where NonNegative
}
